# kpipeline

./: .bazelignore  BUILD.bazel  MODULE.bazel  README.md
.gitea/workflows/: bazel.yml
.github/workflows/: bazel.yml
examples/: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  conditional_pipeline.json  image_pipeline.json  main.cc  main.conditional.cc  main.image.cc  main.multiple.cc  main.sub.graph.node.cc  main_pipeline.json  photo_analysis_subgraph.json  pipeline.json
kpipeline/: BUILD  BUILD.bazel  graph.h  graph_builder.h  logger.cc  logger.h  node.cc  node.h  node_factory.cc  node_factory.h  profiler.h  thread_pool.h  workspace.h
kpipeline/test/: BUILD.bazel  conditional_graph_test.cc  graph_builder_test.cc  graph_test.cc  logger_test.cc  node_factory_test.cc  profiler_test.cc  test_invalid_json.json  test_invalid_no_nodes.json  test_nodes_not_array.json  test_valid_graph.json  thread_pool_test.cc  workspace_test.cc
