module(
    name = "kpipeline",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "fmt", version = "12.0.0")
bazel_dep(name = "jsoncpp", version = "1.9.6")
bazel_dep(name = "googletest", version = "1.17.0.bcr.1")
