module(name = "pipeline-examples")

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "kpipeline", version = "0.1.0")
local_path_override(
    module_name = "kpipeline",
    path = "..",
)

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")
