load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "workspace_test",
    srcs = ["workspace_test.cc"],
    deps = [
        "//kpipeline:workspace",
        "@googletest//:gtest_main",  # 依赖 gtest_main 会自动提供 main 函数
    ],
)

# 测试 Graph 组件
cc_test(
    name = "graph_test",
    srcs = ["graph_test.cc"],
    deps = [
        "//kpipeline:graph",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "conditional_graph_test",
    srcs = ["conditional_graph_test.cc"],
    deps = [
        "//kpipeline:graph",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "node_factory_test",
    srcs = ["node_factory_test.cc"],
    deps = [
        "//kpipeline:node_factory",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "profiler_test",
    srcs = ["profiler_test.cc"],
    deps = [
        "//kpipeline:profiler",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "thread_pool_test",
    srcs = ["thread_pool_test.cc"],
    deps = [
        "//kpipeline:thread_pool",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "graph_builder_test",
    srcs = ["graph_builder_test.cc"],
    data = [
        "test_empty.json",
        "test_invalid_json.json",
        "test_invalid_no_nodes.json",
        "test_nodes_not_array.json",
        "test_valid_graph.json",
    ],
    deps = [
        "//kpipeline:graph_builder",
        "//kpipeline:node_factory",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "logger_test",
    srcs = ["logger_test.cc"],
    deps = [
        "//kpipeline:logger",
        "@googletest//:gtest_main",
    ],
)
